--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>imock管理系统</title>
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=3.0&ak=zZDwCSu1QEwtPpXG0ohEaEzgXvyhfVaT"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
